<resources>
    <string name="app_name">OPEL OwNeRs GANG</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="sndak">#سندك_في_بلدك</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="call">كلمنا</string>
    <string name="galry">الجاليري</string>
    <string name="news">اهم اخبارنا</string>
    <string name="report">التقيم الدوري</string>
    <string name="Contract">شبكة تعاقدتنا</string>
    <string name="protocol">البروتوكول العام</string>
    <string name="gols">أهدافنا ورؤيتنا</string>
    <string name="joun">انضم لينا</string>
    <string name="apout">اعرفنا</string>
    <string name="home2">الصفحة الرئيسية</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="about_app">About app</string>
    <string name="or">or</string>
    <string name="klam">هو الدليل الأول والحصرى لكل اعضاء الجروب ولكل ملاك الأوبل عموما...يمكنك من خلاله معرفة كل ما تحتاجه من خلال شبكة تعاقدات تمتد لأكثر من 200 جهه مختلفه من مطاعم ومراكز خدمه وقطع غيار واكسسوارات للسيارات وكار كير وخلافه....كما يمكنك متابعة اخر الاحداث والحصريات الخاصه بمجتمع العصابه من عروض وايفينتات...سجل عضويتك الأن وتمتع بكامل مزايا كارنيه العصابه وعيش جو المجرم الحقيقى فى دولة العصابه الكبيره.</string>
    <string name="offered_by_gang_dev_team">Offered By Gang Dev Team:</string>
    <string name="mahmoud_lebda">Mahmoud lebda</string>
    <string name="mahmoud_reda">Mahmoud reda</string>
    <string name="app">معالى وفخامة الساده مجرمى ومجرمات العصابه الكرام… أهلا بحضراتكم فى App العصابه</string>
</resources>
