<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home2" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/users"
            android:title="@string/apout" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/multimedia"
            android:title="@string/joun" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/idea"
            android:title="@string/gols" />
        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/law"
            android:title="@string/protocol" />
        <item
            android:id="@+id/nav_6"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/Contract" />
        <item
            android:id="@+id/nav_7"
            android:icon="@drawable/tasks"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_8"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_9"
            android:icon="@drawable/gallery"
            android:title="@string/galry" />
        <item
            android:id="@+id/nav_10"
            android:icon="@drawable/call"
            android:title="@string/call" />
    </group>

</menu>
