<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroung"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".about_app">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/el_messiri"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/klam"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textDirection="rtl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/offered_by_gang_dev_team"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/mahmoud_lebda"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/mahmoud_reda"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>